--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
         <ul>
           <li>
             <img
-              src="/images/rectangle71.jpg"
+              src="./images/rectangle71.jpg"
               alt="Analysis of website visitors"
               width="360"
             />
           </li>
           <li>
             <img
-              src="/images/rectangle71-1.jpg"
+              src="./images/rectangle71-1.jpg"
               alt="Creating an application on a smartphone"
               width="360"
             />
           </li>
           <li>
             <img
-              src="/images/rectangle71-2.jpg"
+              src="./images/rectangle71-2.jpg"
               alt="Synchronization of device"
               width="360"
             />
@@ -104,20 +104,24 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/img-3.jpg" alt="img Mark Guerrero " width="264" />
+            <img
+              src="./images/img-3.jpg"
+              alt="img Mark Guerrero "
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="/images/img-2.jpg" alt="photo Tom Ford" width="264" />
+            <img src="./images/img-2.jpg" alt="photo Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="photo Camila Garcia "
               width="264"
             />
@@ -126,7 +130,7 @@
           </li>
 
           <li>
-            <img src="/images/img.jpg" alt="photo Daniel Wilson" width="264" />
+            <img src="./images/img.jpg" alt="photo Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
